exports[`test intersection-with-imported-object-generates-warnings: No warnings, all props given correctly 1`] = `Array []`;

exports[`test intersection-with-imported-object-generates-warnings: invalid value given for key quy.baz 1`] = `
Array [
  Array [
    "Warning: Failed prop type: Invalid prop \`quy.baz\` of type \`number\` supplied to \`C\`, expected \`string\`.
    in C",
  ],
]
`;

exports[`test intersection-with-imported-object-generates-warnings: no prop types given 1`] = `
Array [
  Array [
    "Warning: Failed prop type: The prop \`qux\` is marked as required in \`C\`, but its value is \`undefined\`.
    in C",
  ],
  Array [
    "Warning: Failed prop type: The prop \`quy\` is marked as required in \`C\`, but its value is \`undefined\`.
    in C",
  ],
  Array [
    "Warning: Failed prop type: The prop \`quz\` is marked as required in \`C\`, but its value is \`undefined\`.
    in C",
  ],
  Array [
    "Warning: Failed prop type: The prop \`foo\` is marked as required in \`C\`, but its value is \`undefined\`.
    in C",
  ],
  Array [
    "Warning: Failed prop type: The prop \`bar\` is marked as required in \`C\`, but its value is \`undefined\`.
    in C",
  ],
  Array [
    "Warning: Failed prop type: The prop \`nested_intersection\` is marked as required in \`C\`, but its value is \`undefined\`.
    in C",
  ],
  Array [
    "Warning: Failed prop type: The prop \`baz\` is marked as required in \`C\`, but its value is \`undefined\`.
    in C",
  ],
]
`;

exports[`test intersection-with-imported-object-generates-warnings: null given for nested shape quy 1`] = `
Array [
  Array [
    "Warning: Failed prop type: The prop \`quy\` is marked as required in \`C\`, but its value is \`null\`.
    in C",
  ],
]
`;

exports[`test intersection-with-imported-object-generates-warnings: test deeper nested type quz.bar: specified with wrong type  1`] = `
Array [
  Array [
    "Warning: Failed prop type: Invalid prop \`quz.bar.baz\` of type \`number\` supplied to \`C\`, expected \`string\`.
    in C",
  ],
]
`;

exports[`test intersection-with-imported-object-generates-warnings: test deeper nested type quz: missing bar: TestType  1`] = `
Array [
  Array [
    "Warning: Failed prop type: The prop \`quz.bar\` is marked as required in \`C\`, but its value is \`undefined\`.
    in C",
  ],
]
`;
